--- a/src/sfdx-project.json
+++ b/src/sfdx-project.json
@@ -3,6 +3,10 @@
     {
       "path": "force-app",
       "default": true
+    },
+    {
+      "path": "src/developer",
+      "default": false
     }
   ],
   "name": "sfdx 2nd gen",
